data/src/objects/Sample__x.object
<CustomObject>
    <description>Sample</description>
    <externalDataSource>Sample_Data_Source</externalDataSource>
    <externalName>Sample</externalName>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sample</relationshipLabel>
        <relationshipName>Sample</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Body__c</fullName>
        <description>Body</description>
        <externalDeveloperName>Body</externalDeveloperName>
        <label>Body</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Name</description>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <externalDeveloperName>Opportunity</externalDeveloperName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sample</relationshipLabel>
        <relationshipName>Sample</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Title</description>
        <externalDeveloperName>Title</externalDeveloperName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <description>UserId</description>
        <externalDeveloperName>UserId</externalDeveloperName>
        <label>UserId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Sample</label>
    <pluralLabel>Sample</pluralLabel>
</CustomObject>